# predator_prey

./: README.md  pyproject.toml  requirements.txt
src/predator_prey/: app.py  main.ipynb
