[project]
name = "predator-prey"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mymissuniverse", email = "mymissuniverse@icloud.com" }
]
dependencies = [
    "mesa>=2.1.5",
    "plotly>=5.19.0",
    "streamlit>=1.31.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "predator_prey:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/predator_prey"]
